# python-minimal-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  main.py  mkdocs.yml  pylock.toml  pyproject.toml  zensical.toml
.agents/skills/minimal-python-boilerplate/: SKILL.md
.claude/: CLAUDE.md
docs/: index.md
src/: main.py
tests/: test_main.py
