[project]
name = "python-minimal-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "zensical",
    "ty>=0.0.9",
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true
